# pfnet-intern-coding-tasks-trial

./: Cargo.toml  ReadMe.md
src/: main.rs  task2022.rs  util.rs
src/task2022/codingtasks/: task1.rs  task2.rs  task3.rs
