[package]
name = "pfnet-intern-coding-tasks-trial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
dyn_partial_eq = "0.1.2"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

